[gd_scene load_steps=3 format=3 uid="uid://cya0dke13rmy8"]

[ext_resource type="Script" path="res://prog_54c.gd" id="1_pw76l"]

[sub_resource type="LabelSettings" id="LabelSettings_xiq2u"]
font_size = 30

[node name="Prog54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pw76l")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 728.0
offset_top = 40.0
offset_right = 816.0
offset_bottom = 424.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
offset_left = 856.0
offset_top = 40.0
offset_right = 944.0
offset_bottom = 424.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.062
anchor_top = 0.099
anchor_right = -0.062
anchor_bottom = 0.099
offset_left = 1055.42
offset_top = -24.152
offset_right = 1143.42
offset_bottom = 359.848
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 40.0
offset_right = 205.0
offset_bottom = 66.0
text = "Diameter:"
label_settings = SubResource("LabelSettings_xiq2u")

[node name="Label2" type="Label" parent="."]
offset_left = 128.0
offset_top = 248.0
offset_right = 180.0
offset_bottom = 274.0
text = "Radius:
"
label_settings = SubResource("LabelSettings_xiq2u")

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.025
offset_left = 128.0
offset_top = 318.0
offset_right = 127.68
offset_bottom = 327.8
text = "Area:"
label_settings = SubResource("LabelSettings_xiq2u")

[node name="Label4" type="Label" parent="."]
offset_left = 128.0
offset_top = 390.0
offset_right = 242.0
offset_bottom = 416.0
text = "Circumference:"
label_settings = SubResource("LabelSettings_xiq2u")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.028
anchor_bottom = 0.049
offset_left = 408.0
offset_top = 40.0
offset_right = 471.744
offset_bottom = 55.248

[node name="Label5" type="Label" parent="."]
offset_left = 407.0
offset_top = 272.0
offset_right = 521.0
offset_bottom = 298.0

[node name="Label6" type="Label" parent="."]
offset_left = 407.0
offset_top = 328.0
offset_right = 521.0
offset_bottom = 354.0

[node name="Label7" type="Label" parent="."]
offset_left = 407.0
offset_top = 400.0
offset_right = 521.0
offset_bottom = 426.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
